#10 change product name both, english and spanish version

--- a/src/templates/sections/products-en.njk
+++ b/src/templates/sections/products-en.njk
@@ -153,7 +153,7 @@
                     <img src="img/products/justone/jo-1.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid Easy Iron
+                    Easy Iron Liquid
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -161,7 +161,7 @@
                     <img src="img/products/justone/jo-2.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid Detergent
+                    Color Clothes Detergent 304.32 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -169,7 +169,7 @@
                     <img src="img/products/justone/jo-3.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Multipurpose Cleaner
+                    Lavander Multipurpose <br>338.14 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -177,7 +177,7 @@
                     <img src="img/products/justone/jo-4.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Multipurpose
+                    Pine Oil Multipurpose <br>338.14 fl oz
                   </div>
                 </div>
               </div>
@@ -197,7 +197,7 @@
                     <img src="img/products/greendream/gd-1.png" alt="Ropa oscura">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid Detergent
+                    Biodegradable Detergent 50.72 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -205,7 +205,7 @@
                     <img src="img/products/greendream/gd-2.png" alt="Liquído Detergente">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Liquid Detergent
+                    Biodegradable Detergent 101.44 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -213,7 +213,7 @@
                     <img src="img/products/greendream/gd-3.png" alt="Dishwasher">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Dishwasher
+                    Biodegradable Dishwasher 94.67 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -221,7 +221,7 @@
                     <img src="img/products/greendream/gd-4.jpg" alt="Dishwasher">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
+                    Biodegradable Fabric Softener 28.74 fl oz
                   </div>
                 </div>
               </div>
@@ -241,7 +241,7 @@
                     <img src="img/products/zaz/zaz-1.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Dishwasher
+                    Dishwasher <br>94.67 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -249,7 +249,7 @@
                     <img src="img/products/zaz/zaz-2.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Degreaser
+                    Degrease <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -257,7 +257,7 @@
                     <img src="img/products/zaz/zaz-3.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Bathroom Disinfectant
+                    Bathroom Desinfectant <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -265,7 +265,7 @@
                     <img src="img/products/zaz/zaz-4.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Glass Cleaner <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -273,7 +273,7 @@
                     <img src="img/products/zaz/zaz-5.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Lavander Multipurpose <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -281,7 +281,7 @@
                     <img src="img/products/zaz/zaz-6.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Lavander Multipurpose <br>67.62 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -289,7 +289,7 @@
                     <img src="img/products/zaz/zaz-7.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Lavander Multipurpose <br>169.07 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -297,7 +297,7 @@
                     <img src="img/products/zaz/zaz-8.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Pine Aroma Multipurpose <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -305,7 +305,7 @@
                     <img src="img/products/zaz/zaz-9.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Pine Aroma Multipurpose <br>67.62 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -313,7 +313,7 @@
                     <img src="img/products/zaz/zaz-10.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Pine Aroma Multipurpose <br>169.07 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -321,7 +321,7 @@
                     <img src="img/products/zaz/zaz-11.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Fresh Sea Multipurpose <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -329,7 +329,7 @@
                     <img src="img/products/zaz/zaz-12.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Fresh Sea Multipurpose <br>67.62 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -337,7 +337,7 @@
                     <img src="img/products/zaz/zaz-13.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Fresh Sea Multipurpose <br>169.07 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -345,7 +345,7 @@
                     <img src="img/products/zaz/zaz-14.png" alt="Aromatizante">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Vibrant Lime Multipurpose <br>33.81 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -353,7 +353,7 @@
                     <img src="img/products/zaz/zaz-15.png" alt="Maderas y laminados">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    All Purpose Cleaners
+                    Vibrant Lime Multipurpose <br>67.62 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -361,7 +361,7 @@
                     <img src="img/products/zaz/zaz-16.png" alt="Plancha fácil">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Glass and Surfaces
+                    Vibrant Lime Multipurpose <br>169.07 fl oz
                   </div>
                 </div>
               </div>
@@ -381,7 +381,7 @@
                     <img src="img/products/softly/soft-1.png" alt="Ropa oscura">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
+                    Soft Spring Fabric Softener 67.62 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -389,7 +389,7 @@
                     <img src="img/products/softly/soft-2.png" alt="Liquído Detergente">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
+                    Sun Shine Fabric Softener 67.62 fl oz
                   </div>
                 </div>
                 <div class="product-line-product">
@@ -397,7 +397,7 @@
                     <img src="img/products/softly/soft-3.png" alt="Dishwasher">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
+                    Fabric Softener <br>236.69 fl oz
                   </div>
                 </div>
                  <div class="product-line-product">
@@ -405,79 +405,11 @@
                     <img src="img/products/softly/soft-4.png" alt="Ropa oscura">
                   </div>
                   <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
+                    Fabric Softener <br>169.07 fl oz
                   </div>
                 </div>
               </div>
               <button class="carroussel-button next-button softly"></button>
-            </div>
-          </div>
-          <div class="product-line-divider"></div>
-          <div class="product-line">
-            <div class="product-line-title">
-              <h4 class="aguaviento-font-montserrat-regular">Perceptions</h4>
-            </div>
-            <div class="product-line-products">
-              <button class="carroussel-button prev-button perceptions"></button>
-              <div class="product-line-carroussel perceptions">
-                <div class="product-line-product">
-                  <div class="product-image-container easyiron-justone">
-                    <img src="img/products/perceptions/per-1.png" alt="Plancha fácil">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Glass and Surfaces
-                  </div>
-                </div>
-                <div class="product-line-product">
-                  <div class="product-image-container aroma-justone">
-                    <img src="img/products/perceptions/per-2.png" alt="Aromatizante">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Anti-grease
-                  </div>
-                </div>
-                <div class="product-line-product">
-                  <div class="product-image-container woodsandlaminate-justone">
-                    <img src="img/products/perceptions/per-3.png" alt="Maderas y laminados">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Anti-bacterial and Anti-fungi
-                  </div>
-                </div>
-                <div class="product-line-product">
-                  <div class="product-image-container easyiron-justone">
-                    <img src="img/products/perceptions/per-4.png" alt="Plancha fácil">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Disinfectant
-                  </div>
-                </div>
-                <div class="product-line-product">
-                  <div class="product-image-container aroma-justone">
-                    <img src="img/products/perceptions/per-5.png" alt="Aromatizante">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
-                  </div>
-                </div>
-                <div class="product-line-product">
-                  <div class="product-image-container woodsandlaminate-justone">
-                    <img src="img/products/perceptions/per-6.png" alt="Maderas y laminados">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
-                  </div>
-                </div>
-                <div class="product-line-product">
-                  <div class="product-image-container woodsandlaminate-justone">
-                    <img src="img/products/perceptions/per-7.png" alt="Maderas y laminados">
-                  </div>
-                  <div class="product-description aguaviento-font-montserrat-regular">
-                    Fabric Softener
-                  </div>
-                </div>
-              </div>
-              <button class="carroussel-button next-button perceptions"></button>
             </div>
           </div>
         </div>
@@ -490,29 +422,17 @@
             <div class="brand costco">
               <img src="img/brands/costco.png" alt="Costco">
             </div>
-             <div class="brand heb">
-              <img src="img/brands/heb.png" alt="Heb">
-            </div>
-            <div class="brand aml">
-              <img src="img/brands/aml.png" alt="Sam's CLub">
-            </div>
              <div class="brand city">
               <img src="img/brands/city.png" alt="Sam's CLub">
             </div>
-            <div class="brand golden-hill">
-              <img src="img/brands/golden-hill.png" alt="Golden Hill">
+            <div class="brand aml">
+              <img src="img/brands/aml.png" alt="Sam's CLub">
             </div>
              <div class="brand lacomer">
               <img src="img/brands/lacomer.png" alt="Sam's CLub">
             </div>
              <div class="brand ley">
               <img src="img/brands/ley.png" alt="Sam's CLub">
-            </div>
-             <div class="brand sams">
-              <img src="img/brands/sams.png" alt="Sam's CLub">
-            </div>
-             <div class="brand smart">
-              <img src="img/brands/smart.png" alt="Sam's CLub">
             </div>
              <div class="brand soriana">
               <img src="img/brands/soriana.png" alt="Sam's CLub">
@@ -526,7 +446,7 @@
               <h4 class="aguaviento-font-montserrat-medium">Conoce más de la marca</h4>
             </div>
             <div class="meet-us-button">
-              <a href="https://www.limpius.com/">
+              <a href="https://www.limpius.com/" target="_blank">
                 <button class="aguaviento-font-montserrat-extralight">CONOCE MÁS AQUÍ</button>
               </a>
             </div>
