#12 increase modal content width

--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -161,7 +161,7 @@
       margin 0 auto
     .modal-content
       padding 0
-      width 492px
+      width 510px
       background #fff
       margin 31px auto 65px auto
       p
@@ -171,6 +171,8 @@
         font-size 14px
       :last-child
         margin-bottom 0
+    .modal-content.vision
+      width 480px
   &.video
     padding 0
     margin 0
