#12 change english version modal content text

--- a/src/templates/sections/company-en.njk
+++ b/src/templates/sections/company-en.njk
@@ -80,12 +80,12 @@
     <div class="aguaviento-modal">
       <button data-remodal-action="close" class="modal-close"></button>
       <div class="modal-title aguaviento-font-montserrat-regular">
-        <h3>Visión</h3>
+        <h3>Vision</h3>
       </div>
       <div class="modal-divider"></div>
-      <div class="modal-content aguaviento-font-montserrat-extralight">
+      <div class="modal-content aguaviento-font-montserrat-extralight vision">
         <p>
-          Ser la empresa líder en desarrollar y fabricar productos de limpieza con un alto desempeño, que satisfagan las necesidades de nuestros clientes, contribuyendo a facilitar la higiene de cada hogar y organización del continente americano.
+          To be the leading company in developing and manufacturing high performance cleaning products, that satisfy the needs of our customers, contributing to facilitate the home and organization hygiene of the American continent.
         </p>
       </div>
     </div>
@@ -94,15 +94,15 @@
     <div class="aguaviento-modal">
       <button data-remodal-action="close" class="modal-close"></button>
       <div class="modal-title aguaviento-font-montserrat-regular">
-        <h3>Misión</h3>
+        <h3>Mission</h3>
       </div>
       <div class="modal-divider"></div>
       <div class="modal-content aguaviento-font-montserrat-extralight">
         <p>
-          Somos un equipo de profesionales con la experiencia puesta al servicio de nuestros clientes, queremos ser reconocidos como el negocio con la mayor relación costo -beneficio.
+          We are a team of professionals with the experience focus to the service of our customers, we want to be recognized as the company with the greatest cost-benefit.
         </p>
         <p>
-          Sin miedo a los desafíos, nos empeñamos en crear los mejores productos de limpieza del mercado, en forma responsable, controlada y amigable con el medio ambiente.
+          Without challenges fear, we strive to create the best cleaning products on the market, in a responsible, controlled and environmentally friendly way.
         </p>
       </div>
     </div>
@@ -111,12 +111,12 @@
     <div class="aguaviento-modal">
       <button data-remodal-action="close" class="modal-close"></button>
       <div class="modal-title aguaviento-font-montserrat-regular">
-        <h3>Política de calidad</h3>
+        <h3>Quality Policy</h3>
       </div>
       <div class="modal-divider"></div>
       <div class="modal-content aguaviento-font-montserrat-extralight">
         <p>
-          En Grupo Aguaviento fabricamos productos de limpieza que satisfacen las expectativas de nuestros clientes y estamos comprometidos al cumplimiento de normas y leyes que nos apliquen, buscando siempre la mejora continua, la protección del medio ambiente y el desarrollo de nuestro personal.
+          Grupo Aguaviento manufactures cleaning products that satisfy  the expectations of our customers and it is committed to compliance with laws and regulations that apply to us, always seeking continuous improvement, protection of the environment and development of our staff
         </p>
       </div>
     </div>
@@ -124,7 +124,7 @@
 <div class="remodal video" data-remodal-id="company-video">
     <div class="aguaviento-modal video">
     <button id="video-close-button" data-remodal-action="close" class="modal-close video" onClick="stopVideo()"></button>
-      <iframe width="700" height="394" src="https://www.youtube.com/embed/8eqGyMWYwHA?controls=0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="700" height="394" src="https://www.youtube.com/embed/leNgeNgo2yA?controls=0" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 {% endblock %}
