#20 add phone field styles

--- a/src/styl/sections/contact.styl
+++ b/src/styl/sections/contact.styl
@@ -1,7 +1,7 @@
 .aguaviento-container
   padding-top 87px
   position relative
-  #name-error, #email-error
+  #name-error, #email-error, #phone-error
     font-family 'Montserrat-ExtraLight'
   .aguaviento-content
     width 620px
@@ -47,11 +47,14 @@
           font-family 'Montserrat-ExtraLight'
           
         .contact-full-name
-          margin-bottom 41px
-          margin-top 11px
+          margin-bottom 24px
           position relative    
         
         .contact-email
+          position relative
+          margin-bottom 24px
+        
+        .contact-phone
           position relative
                  
       .contact-row-2
