#20 add phone field in form

--- a/src/templates/sections/contact-en.njk
+++ b/src/templates/sections/contact-en.njk
@@ -26,6 +26,10 @@
               <input class="aguaviento-font-montserrat-regular" type="text" name="email" required>
               <label id="contact-form-email" class="label aguaviento-font-montserrat-regular" for="email">E-mail</label>
             </div>
+            <div class="contact-phone">
+              <input class="aguaviento-font-montserrat-regular" type="text" name="phone" required>
+              <label id="contact-form-phone" class="label aguaviento-font-montserrat-regular" for="phone">Phone</label>
+            </div>
           </div>
           <div class="contact-row-2">
             <div class="contact-message">
