#1 change banner carroussel second image and maquila modal second image url

--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -65,11 +65,11 @@
   background-position center 24%
 .aguaviento-header.two
   height 442px !important
-  background url("../img/manos.jpg")
+  background url("../img/manos-2.jpg")
   background-attachment scroll
   background-repeat no-repeat
   background-size cover
-  background-position right 10%
+  background-position center bottom
 .aguaviento-header.three
   height 442px !important
   background url("../img/group-24@3x.png")
@@ -563,7 +563,7 @@
   .modal-service-image.two
     width 500px
     height 300px
-    background url("../img/maquila/maquila-2.JPG")
+    background url("../img/maquila/maquila-2.jpg")
     background-attachment scroll
     background-repeat no-repeat
     background-size cover
