--- a/src/styl/sections/innovation.styl
+++ b/src/styl/sections/innovation.styl
@@ -23,10 +23,9 @@
     width 100vw
     height 25vw
     margin-top 87px
-    background url("../img/pexels-photo.jpg")
+    background url("../img/innovation-parallax.jpg")
     background-attachment fixed
     background-repeat no-repeat 
-    background-size cover
     background-position center top
 
   &-container
