#22 change carroussel images order

--- a/src/templates/sections/plant.njk
+++ b/src/templates/sections/plant.njk
@@ -9,13 +9,12 @@
 
 {% block content %}
   <div class="aguaviento-container">
-    <div class="aguaviento-content plant">
-      <div class="aguaviento-section-title plant">
-        <img src="img/icons/group-11@3x.png" alt="">
-        <h2 class="title aguaviento-font-montserrat-regular">Instalaciones</h2>
-      </div>
-    </div>
     <div class="aguaviento-slider plant-carroussel">
+      <div class="plant-slide-1">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+        </div>
+      </div>
       <div class="plant-slide-2">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
@@ -45,6 +44,12 @@
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
         </div>
+      </div>
+    </div>
+    <div class="aguaviento-content plant">
+      <div class="aguaviento-section-title plant">
+        <img src="img/icons/group-11@3x.png" alt="">
+        <h2 class="title aguaviento-font-montserrat-regular">Instalaciones</h2>
       </div>
     </div>
   </div>
