#10 add 2 slides to carroussel

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -147,6 +147,16 @@
     background url("../img/maquinaria/maquinaria-14.jpg")
     background-position center
     background-size cover
+    
+  &fifteen
+    background url("../img/maquinaria/maquinaria-15.jpg")
+    background-position center
+    background-size cover
+    
+  &sixteen
+    background url("../img/maquinaria/maquinaria-16.jpg")
+    background-position center
+    background-size cover
 
 .products-divider-container
   width 516px
