#10 add 2 new slides to carroussel

--- a/src/templates/sections/products.njk
+++ b/src/templates/sections/products.njk
@@ -52,6 +52,12 @@
       <div class="products-slide-fourteen">
         
       </div>
+      <div class="products-slide-fifteen">
+
+      </div>
+      <div class="products-slide-sixteen">
+
+      </div>
     </div>
     <div class="aguaviento-content products">
       <div class="aguaviento-section-title products">
@@ -145,7 +151,7 @@
           <div class="product-line-divider"></div>
           <div class="product-line">
             <div class="product-line-title">
-              <h4 class="aguaviento-font-montserrat-regular">Green Dream</h4>
+              <h4 class="aguaviento-font-montserrat-regular">Green Dreams</h4>
             </div>
             <div class="product-line-products">
               <button class="carroussel-button prev-button green-dream"></button>
