#1 change info contact text color

--- a/src/styl/sections/contact.styl
+++ b/src/styl/sections/contact.styl
@@ -94,7 +94,7 @@
   	.aguaviento-location
       margin 45px 0 101px 0
       .contact-adress
-        color #c1c1c1
+        color #0d74b9
         font-size 15px
         margin-bottom 50px
       #contact-map
