#33. Add class notice-privacy in base.styl

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -86,6 +86,13 @@ textarea
   resize none
 // END FORMS //
 
+.notice-privacy
+  color #555
+  font-size remify(16px)
+  letter-spacing 1px
+  line-height 26px
+  margin 50px 20%
+
 @import 'partials/navbar'
 
 @import 'partials/footer'
