#33. Add the conditions of aviso-privacidad in navbar.njk

--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -65,6 +65,8 @@
         <a href="./plant.html" class="language-link active">ES</a>
         {% elif section == 'contact' %}
         <a href="./contact.html" class="language-link active">ES</a>
+        {% elif section == 'aviso-privacidad' %}
+        <a href="./aviso-privacidad.html" class="language-link active">ES</a>
         {% endif %}
       </li>
       <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
@@ -83,6 +85,8 @@
         <a href="./plant-en.html" class="language-link">EN</a>
         {% elif section == 'contact' %}
         <a href="./contact-en.html" class="language-link">EN</a>
+        {% elif section == 'aviso-privacidad' %}
+        <a href="./notice-privacy.html" class="language-link">EN</a>
         {% endif %}
       </li>
     </ul>
