#33. Add the conditions of notice-privacy in navbar-es.njk

--- a/src/templates/partials/navbar-en.njk
+++ b/src/templates/partials/navbar-en.njk
@@ -65,6 +65,8 @@
         <a href="./plant.html" class="language-link">ES</a>
         {% elif section == 'contact-en' %}
         <a href="./contact.html" class="language-link">ES</a>
+        {% elif section == 'notice-privacy' %}
+        <a href="./aviso-privacidad.html" class="language-link">ES</a>
         {% endif %}
       </li>
       <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
@@ -83,6 +85,8 @@
         <a href="./plant-en.html" class="language-link active">EN</a>
         {% elif section == 'contact-en' %}
         <a href="./contact-en.html" class="language-link active">EN</a>
+        {% elif section == 'notice-privacy' %}
+        <a href="./notice-privacy.html" class="language-link active">EN</a>
         {% endif %}
       </li>
     </ul>
