#33. Add mobile version to class notice-privacy in base.styl

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -93,6 +93,10 @@ textarea
   line-height 26px
   margin 50px 20%
 
+@media screen and (max-width 786px)
+  .notice-privacy
+    margin 40px 30px
+
 @import 'partials/navbar'
 
 @import 'partials/footer'
